--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-      "target": "ES6",
+      "target": "ESNext",
       "module": "CommonJS",
       "outDir": "./dist",
-      "rootDir": "./src/",
+      "rootDir": "./",
       "strict": true,
       "esModuleInterop": true,
       "skipLibCheck": true
