--- a/server/package.json
+++ b/server/package.json
@@ -8,20 +8,32 @@
     "dev": "nodemon server.ts"
   },
   "dependencies": {
-    "@types/express": "^4.17.17",
-    "@types/mongoose": "^5.11.97",
-    "@types/node": "^20.5.7",
-    "@types/validator": "^13.11.1",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.40.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.5",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.5.9",
+    "@types/validator": "^13.11.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
