SPRINT-1: Node verison Specified on Application for Deploying

--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,9 @@
     "start": "ts-node server.ts",
     "dev": "nodemon server.ts"
   },
+  "engines": {
+    "node": ">=16.20.1"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.40.0",
