--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "main": "server.ts",
   "license": "MIT",
   "scripts": {
+    "generate-swagger": "npx swagger-jsdoc -d ./config/swaggerConfig.ts -o swagger.json",
     "start": "ts-node server.ts",
     "dev": "nodemon server.ts"
   },
@@ -36,6 +37,8 @@
     "@types/morgan": "^1.9.5",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.9",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/validator": "^13.11.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
