--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.68.0"
   },
   "devDependencies": {
