--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
     "next": "latest",
