SPRINT: some UI changs git complict resolved

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "autoprefixer": "latest",
