--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.5.1",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
